# CaptionCheck

./: .gitignore  README.md  captioncheck_config.example.json  captioncheck_config.json  pyproject.toml
captioncheck/: __main__.py  dataset.py  json_io.py
captioncheck/gui/: main_window.py
src/captioncheck/: __init__.py  config.py  external_editor.py  preprocess.py
src/captioncheck/gui/: main_window.py
