[project]
name = "captioncheck"
version = "0.1.0"
description = "Review and fix long_caption annotations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
captioncheck = "captioncheck.__main__:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captioncheck"]
